fixed overflow and responsiveness

--- a/src/styles/bot.scss
+++ b/src/styles/bot.scss
@@ -5,10 +5,15 @@ section {
     background: $primary;
     // height: calc(100vh - 18px) !important;
     height: calc(100vh - 0.6px) !important;
-    overflow: auto;
+    overflow: hidden;
     .chat {
+      // overflow: auto;
+      // height: 65vh;
+      // padding: 16px;
+
       overflow: auto;
-      height: 65vh;
+      height: 100vh;
+      max-height: calc(100vh - 256px) !important;
       padding: 16px;
     }
     .chat-pill {
@@ -87,7 +92,7 @@ section {
   margin-top: 0 !important;
   height: 100vh;
   max-width: 100vw !important;
-  overflow: auto !important;
+  overflow: hidden !important;
   -webkit-transform: translate3d(0%, 0, 0) !important;
   -ms-transform: translate3d(0%, 0, 0) !important;
   -o-transform: translate3d(0%, 0, 0) !important;
@@ -96,6 +101,7 @@ section {
     height: 100%;
     .modal-body {
       padding: 0 !important;
+      overflow: hidden;
     }
   }
 }
@@ -174,9 +180,9 @@ section {
 }
 
 @media screen and (max-width: 991.99px) {
-  .bot-side-menu {
-    overflow-x: hidden !important;
-  }
+  // .bot-side-menu {
+  //   overflow-x: hidden !important;
+  // }
   .bot-menu-btn {
     height: 220px;
     width: 85px;
@@ -200,9 +206,9 @@ section {
 }
 
 @media screen and (max-width: 767.99px) {
-  .bot-side-menu {
-    overflow-x: hidden !important;
-  }
+  // .bot-side-menu {
+  //   overflow-x: hidden !important;
+  // }
   .bot-menu-btn {
     height: 180px;
     width: 55px;
@@ -227,9 +233,9 @@ section {
 }
 
 @media screen and (max-width: 575.99px) {
-  .bot-side-menu {
-    overflow-x: hidden !important;
-  }
+  // .bot-side-menu {
+  //   overflow-x: hidden !important;
+  // }
   .bot-menu-btn {
     height: 76px;
     width: 42px;
